# 2026-Hybrid-Signal-Learning

./: .gitignore  All_blackboxes.ipynb  BAB_NODE_models.ipynb  BAB_linear_data_model.ipynb  Copia_de_preliminary_results_ball_and_beam.ipynb  Full_notebook.ipynb  HYCO_BAB.ipynb  Pedagogical_example_NODE.ipynb  Pedagogical_example_NODE_linear_data.ipynb  README.md  benchmark_results.json  main.py  pyproject.toml
2026-Hybrid-Signal-Learning-helon/hybrid_signal_learning/: __init__.py  bab_train.py
2026-Hybrid-Signal-Learning-helon/scripts/: run_bab_models.py
POC_models/: All_blackboxes.ipynb
comparison/: comparison_results.json
docs/: README.md  benchmarking.md  hybrid_models.md  neural_cde.md
examples/: benchmark.py  best_model_plots.py  compare_bab_results.py  fix_negative_r2.py  full_comparison.ipynb  hp_search.py  hybrid_models_demo.py  load_and_test.py  model_comparison.py  neural_cde_demo.py  smoke_test_all.py  train_all.py  train_single.py
hybrid_signal_learning/: __init__.py  bab_data.py  bab_io.py  bab_models.py  bab_plots.py  bab_train.py  io.py  plots.py  train.py
hybrid_signal_learning/models/: __init__.py  base.py  blackbox.py  esn.py  factory.py  feedforward.py  hybrid.py  neural_sde.py  physics.py  sequence.py  ude.py
notebooks/: BAB_models_analysis.ipynb
scripts/: run_bab_models.py
src/: __init__.py  config.py  hp_search.py  logging.py  wandb_logger.py
tests/: test_benchmark_factories.py  test_dataset.py  test_model_constructors.py  test_model_registry.py  test_runtime.py  test_torch_datasets.py  test_train_single_smoke.py
(+69 files in other folders)
